--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.11.3",
     "mongojs": "^1.3.0",
     "nodemon": "^1.4.1",
+    "passport": "^0.3.0",
     "passport-facebook": "^2.0.0"
   }
 }
